@@ -4,15 +4,15 @@
 Advanced Command Generator
 --------------------------
 
-.. include:: /../../examples/hlapi/asyncio/manager/cmdgen/multiple-concurrent-queries.py
+.. include:: /../../examples/hlapi/asyncio/manager/cmdgen/multiple-concurrent-queries-over-ipv4-and-ipv6.py
    :start-after: """
    :end-before: """#
 
-.. literalinclude:: /../../examples/hlapi/asyncio/manager/cmdgen/multiple-concurrent-queries.py
+.. literalinclude:: /../../examples/hlapi/asyncio/manager/cmdgen/multiple-concurrent-queries-over-ipv4-and-ipv6.py
    :start-after: """#
    :language: python
 
-:download:`Download</../../examples/hlapi/asyncio/manager/cmdgen/multiple-concurrent-queries.py>` script.
+:download:`Download</../../examples/hlapi/asyncio/manager/cmdgen/multiple-concurrent-queries-over-ipv4-and-ipv6.py>` script.
 
 
 .. include:: /../../examples/hlapi/asyncio/manager/cmdgen/multiple-sequential-queries.py
