@@ -15,15 +15,15 @@ Transport tweaks
 :download:`Download</../../examples/v3arch/asyncore/manager/ntfrcv/multiple-network-interfaces.py>` script.
 
 
-.. include:: /../../examples/v3arch/asyncore/manager/ntfrcv/multiple-network-transports.py
+.. include:: /../../examples/v3arch/asyncore/manager/ntfrcv/multiple-network-transports-incl-ipv4-and-ipv6.py
    :start-after: """
    :end-before: """#
 
-.. literalinclude:: /../../examples/v3arch/asyncore/manager/ntfrcv/multiple-network-transports.py
+.. literalinclude:: /../../examples/v3arch/asyncore/manager/ntfrcv/multiple-network-transports-incl-ipv4-and-ipv6.py
    :start-after: """#
    :language: python
 
-:download:`Download</../../examples/v3arch/asyncore/manager/ntfrcv/multiple-network-transports.py>` script.
+:download:`Download</../../examples/v3arch/asyncore/manager/ntfrcv/multiple-network-transports-incl-ipv4-and-ipv6.py>` script.
 
 
 .. include:: /../../examples/v3arch/asyncore/manager/ntfrcv/determine-peer-network-address.py
