@@ -5,14 +5,14 @@ Preload PySNMP MIBs
 Send a series of SNMP GETNEXT requests using the following options:
 
 * with SNMPv3 with user 'usr-md5-des', MD5 auth and DES privacy protocols
-* over IPv6/UDP
-* to an Agent at [::1]:161
+* over IPv4/UDP
+* to an Agent at demo.snmplabs.com:161
 * for all OIDs starting from 1.3.6
 * preload all Python MIB modules found in search path
 
 Functionally similar to:
 
-| $ snmpwalk -v3 -l authPriv -u usr-md5-des -A authkey1 -X privkey1 -m ALL udp6:[::1]:161 1.3.6
+| $ snmpwalk -v3 -l authPriv -u usr-md5-des -A authkey1 -X privkey1 -m ALL demo.snmplabs.com:161 1.3.6
 
 """#
 from pysnmp.hlapi import *
@@ -22,7 +22,7 @@ for (errorIndication,
      errorIndex,
      varBinds) in nextCmd(SnmpEngine(),
                           UsmUserData('usr-md5-des', 'authkey1', 'privkey1'),
-                          Udp6TransportTarget(('::1', 161)),
+                          UdpTransportTarget(('demo.snmplabs.com', 161)),
                           ContextData(),
                           ObjectType(ObjectIdentity('1.3.6').loadMibs())):
 
